<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAddGame"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextTeam1Goals"
        android:hint="0"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:gravity="right"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextTeam2Goals"
        android:hint="0"
        android:layout_below="@+id/spinner2"
        android:layout_alignParentStart="true"
        android:gravity="right"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAddGame"
        android:id="@+id/buttonAddGame"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onSaveGameClick"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_below="@+id/editTextTeam1Goals"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_reload_teams"
        android:id="@+id/buttonReloadTeams"
        android:layout_above="@+id/buttonAddGame"
        android:layout_centerHorizontal="true"
        android:onClick="refreshTeamList"/>

</RelativeLayout>